[package]
name = "google-analytics-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for Google Analytics 4 — reports, realtime, and admin"

[[bin]]
name = "google-analytics-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
toml = "0.8"
jsonwebtoken = "9"
url = "2"

[profile.release]
lto = true
strip = true
